# KMX

./: .gitignore  KMX.py  LICENSE  README.md  gpu_csr_kmer.py  main.py  pyproject.toml  setup.py  setup.sh
src/: __init__.py  __main__.py  args.py  cli.py  create_csr_matrix.py  manifest.py  run_gerbil.py
